--- a/src/app.env
+++ b/src/app.env
@@ -1,2 +1,6 @@
 HUE_BRIDGE_IP=10.0.0.112
 HUE_USERNAME=kfZqr9nqnhINjSKYlPXQ4R6TacR9nPE5Q9UOOC14
+HUE_LIGHT_NUMBER=8
+COLOR_CYCLE_INTERVAL=30
+COLOR_BRI=25
+COLOR_SAT=254
